name:                hasquito
version:             0.1.0.0
synopsis:            A compiler for an annoying lazy functional language
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          danny.gratzer@gmail.com
copyright:           2014, Danny Gratzer
category:            Language
build-type:          Simple
cabal-version:       >=1.10
executable hasquito
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       hasquito,
                       text,
                       base >=4 && <5
           
library
  exposed-modules:     Language.Hasquito.Syntax,
                       Language.Hasquito.TypeCheck,
                       Language.Hasquito.Util,
                       Language.Hasquito.Parser,
                       Language.Hasquito
                       
  build-depends:       text >= 1.0,
                       containers >= 0.5,
                       mtl >= 2.2,
                       attoparsec,
                       monad-gen,
                       base >=4 && <5
  
  hs-source-dirs:      src
  default-language:    Haskell2010
  