name:                hasquito
version:             0.1.0.0
synopsis:            A compiler for an annoying lazy functional language
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          danny.gratzer@gmail.com
copyright:           2014, Danny Gratzer
category:            Language
build-type:          Simple
cabal-version:       >=1.10
executable hasquitoc
  main-is:             Main.hs
  hs-source-dirs:      exe
  default-language:    Haskell2010
  build-depends:       hasquito,
                       text,
                       base >=4 && <5
           
library
  exposed-modules:     Language.Hasquito.Syntax,
                       Language.Hasquito.TypeCheck,
                       Language.Hasquito.Util,
                       Language.Hasquito.Parser,
                       Language.Hasquito.Closure,
                       Language.Hasquito.Sanity,
                       Language.Hasquito.STG,
                       Language.Hasquito.DeExp,
                       Language.Hasquito.JSify,
                       Language.Hasquito.MakeMain,
                       Language.Hasquito
                       
  build-depends:       text          >= 1.0,
                       containers    >= 0.3,
                       mtl           >= 2.2.1,
                       attoparsec    >= 0.10,
                       monad-gen     >= 0.2.0.3,
                       js-good-parts >= 0.0.7,
                       base          >=4 && <5
  
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite test-hasquito
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  build-depends:      hasquito,
                      test-framework,
                      test-framework-hunit,
                      HUnit,
                      containers,
                      mtl,
                      text,
                      base >=4 && <5
  default-language:    Haskell2010                      